UI - Added a hover preview to items in the ListBox of the DesignAllInputControl.
-- a preview changes to which ever item is currently highlighted over.

--- a/Flexure/Controls/DesignAllInputDialog.xaml
+++ b/Flexure/Controls/DesignAllInputDialog.xaml
@@ -69,7 +69,13 @@
                      SelectedItem="{Binding SelectedDesign, Mode=OneWayToSource}"
                      DisplayMemberPath="ResultSummary" 
                              SelectionChanged="listValidDesigns_SelectionChanged"
-                     />
+                    >
+                        <ListBox.ItemContainerStyle>
+                            <Style TargetType="ListBoxItem">
+                                <EventSetter Event="MouseEnter" Handler="ListBoxItem_MouseEnter"/>
+                            </Style>
+                        </ListBox.ItemContainerStyle>
+                    </ListBox>
                 </ScrollViewer>
             </StackPanel>
 
