--- a/Flexure/Controls/FlexureDesignResultControl.xaml
+++ b/Flexure/Controls/FlexureDesignResultControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ACI318_19Library.DesignResultControl"
+﻿<UserControl x:Class="ACI318_19Library.FlexureDesignResultControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ACI318_19Library"
@@ -23,7 +23,7 @@
         <!-- Left: Numerical Results -->
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="0,0,12,0">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Design Results" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
+                <TextBlock Text="Flexural Design Results" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
                 <TextBlock Grid.Row="0" Grid.Column="3" 
                            Text="{Binding Result.crossSection.SectionSummaryString, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}"
                            FontWeight="Bold" FontSize="14" Margin="8,0,0,8"/>
