--- a/Flexure/Controls/FlexuralDesignResultControl.xaml
+++ b/Flexure/Controls/FlexuralDesignResultControl.xaml
@@ -1,16 +1,8 @@
-<<<<<<<< Updated upstream:Flexure/Controls/FlexureDesignResultControl.xaml
-﻿<UserControl x:Class="ACI318_19Library.FlexureDesignResultControl"
-========
-﻿<UserControl x:Class="ACI318_19Library.ShearDesignResultControl"
->>>>>>>> Stashed changes:Flexure/Controls/ShearDesignResultControl.xaml
+﻿<UserControl x:Class="ACI318_19Library.FlexuralDesignResultControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ACI318_19Library"
              Height="Auto" Width="Auto">
-    <UserControl.Resources>
-        <local:NumberToBackgroundConverter x:Key="NumberToBackgroundConverter"/>
-    </UserControl.Resources>
-    
     <Grid Margin="8">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -27,7 +19,7 @@
         <!-- Left: Numerical Results -->
         <StackPanel Grid.Column="0" Grid.Row="0" Margin="0,0,12,0">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Flexural Design Results" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
+                <TextBlock Text="Design Results" FontWeight="Bold" FontSize="14" Margin="0,0,0,8"/>
                 <TextBlock Grid.Row="0" Grid.Column="3" 
                            Text="{Binding Result.crossSection.SectionSummaryString, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}"
                            FontWeight="Bold" FontSize="14" Margin="8,0,0,8"/>
@@ -75,20 +67,10 @@
 
                 <!-- Row 2 -->
                 <TextBlock Grid.Row="2" Grid.Column="0" Text="ϕ:" Margin="2"/>
-                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Result.PhiFlexure, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}"
-                            Background="{Binding Result.PhiFlexure, RelativeSource={RelativeSource AncestorType=UserControl}, 
-                              Converter={StaticResource NumberToBackgroundConverter}, 
-                              ConverterParameter='0.65,0.8999,1.00'}"
-                           Margin="2"/>
+                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Result.Phi, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>
 
-                <TextBlock Grid.Row="2" Grid.Column="2" Text="εt:" Margin="2"
-                           
-                           />
-                <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding Result.eps_T, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F5}}" 
-                            Background="{Binding Result.eps_T, RelativeSource={RelativeSource AncestorType=UserControl}, 
-                              Converter={StaticResource NumberToBackgroundConverter}, 
-                              ConverterParameter='0.001999,0.004999,10.0'}"
-                           Margin="2"/>
+                <TextBlock Grid.Row="2" Grid.Column="2" Text="εt:" Margin="2"/>
+                <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding Result.eps_T, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F5}}" Margin="2"/>
 
                 <!-- Row 3 -->
                 <TextBlock Grid.Row="3" Grid.Column="0" Text="εy:" Margin="2"/>
