--- a/Flexure/Controls/ShearDesignResultControl.xaml
+++ b/Flexure/Controls/ShearDesignResultControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ACI318_19Library.ShearDesignResultControl"
+<UserControl x:Class="ACI318_19Library.ShearDesignResultControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ACI318_19Library"
