--- a/Flexure/Controls/FlexureDesignResultControl.xaml
+++ b/Flexure/Controls/FlexureDesignResultControl.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ACI318_19Library"
-             Height="Auto" Width="Auto">
+             >
     <UserControl.Resources>
         <local:NumberToBackgroundConverter x:Key="NumberToBackgroundConverter"/>
     </UserControl.Resources>
@@ -10,7 +10,7 @@
     <Grid Margin="8">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="500" />
+            <ColumnDefinition Width="200" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -70,7 +70,7 @@
                 <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding Result.a, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>
 
                 <!-- Row 2 -->
-                <TextBlock Grid.Row="2" Grid.Column="0" Text="ϕ:" Margin="2"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="ϕ_f:" Margin="2"/>
                 <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Result.PhiFlexure, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}"
                             Background="{Binding Result.PhiFlexure, RelativeSource={RelativeSource AncestorType=UserControl}, 
                               Converter={StaticResource NumberToBackgroundConverter}, 
