--- a/Flexure/Controls/ShearDesignResultControl.xaml
+++ b/Flexure/Controls/ShearDesignResultControl.xaml
@@ -2,12 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ACI318_19Library"
-             Height="Auto" Width="Auto">
+             >
     
     <Grid Margin="8">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="500" />
+            <ColumnDefinition Width="150" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -32,11 +32,11 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
                     <!-- Label -->
-                    <ColumnDefinition Width="170"/>
+                    <ColumnDefinition Width="50"/>
                     <!-- Value -->
                     <ColumnDefinition Width="100"/>
                     <!-- Second label -->
-                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="50"/>
                     <!-- Second value -->
                 </Grid.ColumnDefinitions>
 
@@ -70,8 +70,8 @@
                 <TextBlock Grid.Row="2" Grid.Column="0" Text="Av/s:" Margin="2"/>
                 <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Result.Av_over_s, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>
 
-                <TextBlock Grid.Row="2" Grid.Column="2" Text="ϕ:" Margin="2"/>
-                <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding Result.PhiFlexure, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>
+                <TextBlock Grid.Row="2" Grid.Column="2" Text="ϕ_v:" Margin="2"/>
+                <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding Result.PhiShear, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>
            </Grid>
         </StackPanel>
 
