--- a/Flexure/Controls/ShearDesignResultControl.xaml
+++ b/Flexure/Controls/ShearDesignResultControl.xaml
@@ -53,11 +53,6 @@
                 </Grid.RowDefinitions>
 
                 <!-- Row 0 -->
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="ϕVn (kip):" Margin="2"/>
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Result.PhiVn_kip, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}" Margin="2"/>
-
-                <TextBlock Grid.Row="0" Grid.Column="2" Text="Vn (kip):" Margin="2"/>
-                <TextBlock Grid.Row="0" Grid.Column="3" Text="{Binding Result.Vn_kip, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}" Margin="2"/>
 
                 <!-- Row 1 -->
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="ϕ_v:" Margin="2"/>
@@ -71,17 +66,39 @@
                 <TextBlock Grid.Row="2" Grid.Column="3" Text="{Binding Result.Vc_kip_half, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}" Margin="2"/>
 
                 <!-- Row 3 -->
-                <TextBlock Grid.Row="3" Grid.Column="0" Text="Vs (kip):" Margin="2"/>
-                <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Result.Vs_kip, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}" Margin="2"/>
+                <!--<TextBlock Grid.Row="3" Grid.Column="0" Text="Vs (kip):" Margin="2"/>
+                <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Result.Vs_kip, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}" Margin="2"/>-->
 
+                
                 <TextBlock Grid.Row="3" Grid.Column="2" Text="Vs_max (kip):" Margin="2"/>
                 <TextBlock Grid.Row="3" Grid.Column="3" Text="{Binding Result.Vs_max_kip, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:N0}}" Margin="2"/>
 
-                <!-- Row 2 -->
+                <!-- Row 2 --><!--
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="Av/s (sq.in./in):" Margin="2"/>
-                <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Result.Av_over_s, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>
+                <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Result.Av_over_s, RelativeSource={RelativeSource AncestorType=UserControl}, StringFormat={}{0:F2}}" Margin="2"/>-->
 
-           </Grid>
+
+
+            </Grid>
+
+            <DataGrid Grid.Row="5" ItemsSource="{Binding Result.ShearResults, RelativeSource={RelativeSource AncestorType=UserControl}}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Size"
+                            Binding="{Binding Layer.BarSize}" />
+                    <DataGridTextColumn Header="Legs"
+                            Binding="{Binding Layer.NumShearLegs}" />
+                    <DataGridTextColumn Header="Spacing"
+                            Binding="{Binding Layer.Spacing, StringFormat={}{0:F4}}" />
+                    <DataGridTextColumn Header="Av_min / S"
+                            Binding="{Binding Layer.Av_over_S, StringFormat={}{0:F4}}" />
+                    <DataGridTextColumn Header="Vs (kips)"
+                            Binding="{Binding Vs_kip, StringFormat={}{0:N0}}" />
+                    <DataGridTextColumn Header="Vn (kips)"
+                            Binding="{Binding Vn_kip, StringFormat={}{0:N0}}" />
+                    <DataGridTextColumn Header="ϕVn (kips)"
+                            Binding="{Binding PhiVn_kip, StringFormat={}{0:N0}}" />
+                </DataGrid.Columns>
+            </DataGrid>
         </StackPanel>
 
         <!-- Right: Canvas -->
